--- a/spring-boot-mongo-javers/pom.xml
+++ b/spring-boot-mongo-javers/pom.xml
@@ -10,34 +10,27 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.arya.jpa.auditing.envers</groupId>
-    <artifactId>spring-boot-hibernate-envers</artifactId>
-    <packaging>jar</packaging>
-    <name>spring-boot-jpa-data-envers</name>
-    <description>Demo project for Spring Boot JPA data auditing using Envers</description>
-    <url>http://maven.apache.org</url>
+    <groupId>com.arya.mongo.auditing</groupId>
+    <artifactId>spring-boot-mongo-javers</artifactId>
+    <name>spring-boot-mongo-javers</name>
+    <description>Demo project for Spring Boot Auditing Mongo entities using Javers</description>
+
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-
     <dependencies>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-envers</artifactId>
+            <groupId>org.javers</groupId>
+            <artifactId>javers-spring-boot-starter-mongo</artifactId>
+            <version>5.11.1</version>
         </dependency>
 
     </dependencies>
