--- a/spring-boot-mongo-javers/src/main/resources/application.yml
+++ b/spring-boot-mongo-javers/src/main/resources/application.yml
@@ -1,16 +1,22 @@
 
 
+spring:
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: spring_boot_mongo_javers
+
+  jackson:
+    default-property-inclusion: NON_NULL
+
 javers:
-  mongodb:
-    host: localhost
-    port: 27017
-    database: spring_boot_mongo_app
-    authentication-database: admin
-    username:
-    password:
+  documentDbCompatibilityEnabled: false
+  objectAccessHook: org.javers.spring.mongodb.DBRefUnproxyObjectAccessHook
+  snapshotsCacheSize: 5000
 
 
-# Enable to print variables
-#logging:
-#  level:
-#    ROOT: DEBUG
+# Enable Logging mongo queries
+logging:
+  level:
+    org.springframework.data.mongodb.core.MongoTemplate: DEBUG
